# x-diff-rs

./: Cargo.toml  README.md  file1.xml  file2.xml
src/: diff.rs  lib.rs  tree.rs
test/: file1.xml  file2.xml
